<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ScrollView

        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.android.eshopy.Login">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="86dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="My Bakery"
                        android:textColor="@color/color_white"
                        android:textSize="34sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:gravity="center"
                        android:text="Choose from hand-picked sights and activities from
around the world and create your own day-by-day
travel itinerary in just a few minutes"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingLeft="25dp"
                    android:paddingStart="25dp"
                    android:paddingRight="25dp"
                    android:paddingEnd="25dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <!-- FLOATING LABEL EDIDTEXT NUMERO DE PEDIDO A REALIZAR -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/color_white"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin">

                        <EditText
                            android:id="@+id/edUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="text"
                            android:textColor="@color/color_white"

                            android:textSize="18sp" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- FLOATING LABEL EDIDTEXT NUMERO DE PEDIDO A REALIZAR -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin">

                        <EditText
                            android:id="@+id/edPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_pass"
                            android:theme="@style/EditTextForDarkBackground"
                            android:inputType="textPassword"
                            android:textColor="@color/color_white"
                            android:textColorHint="@color/color_semitransparent_white"
                            android:textSize="18sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btnInicioSesion"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="24dp"
                        android:text="@string/btn_login_text"
                        android:onClick="navigateHome"
                        android:background="@drawable/btn_effect_ripple_red"
                        android:textColor="@color/color_white"/>

                    <Button
                        android:id="@+id/btnCrearCuenta"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/vertical_custom_margin"
                        android:clickable="true"
                        android:background="@drawable/btn_effect_ripple_green"
                        android:text="@string/btn_register_text"
                        android:textColor="@color/color_white"/>


                    <LinearLayout
                        android:layout_marginTop="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageButton
                            android:src="@drawable/ic_btn_facebook"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:scaleType="fitXY"/>

                        <ImageButton
                            android:src="@drawable/ic_btn_pinterest"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:scaleType="fitXY"/>

                        <ImageButton
                            android:src="@drawable/ic_btn_twitter"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:scaleType="fitXY"/>
                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:id="@+id/tvForgotPassword"
                        android:text="@string/tv_forgot_password"
                        android:textColor="@color/color_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>